# ev-platform

./: CMakeCache.txt  CMakeLists.txt  README.md  vcpkg.json
cmake/vcpkg/: vcpkg.toolchain.cmake
src/: CMakeLists.txt  evleader-config.cmake
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/cmake/: add_evleader_executable.cmake  add_evleader_module.cmake  evleader-install-targets.cmake  set_evleader_target_properties.cmake
src/data/: CMakeLists.txt
src/data/include/evleader/data/: supervision.hpp
src/data/src/: supervision.cpp
tests/: CMakeLists.txt
tests/cmake/: add_evleader_test.cmake
tests/data/: CMakeLists.txt  supervision_test.cpp
